# openapi.yaml
@@ -274,6 +274,26 @@ definitions:
         - spec
       additionalProperties: false
 
+  participantrecord:
+    type: object
+    description: participantrecord object
+    allOf:
+      - $ref: "#/definitions/ProposedEntry"
+      - properties:
+          version:
+            type: string
+          metadata:
+            type: object
+            additionalProperties: true
+          data:
+            type: object
+            $ref: "pkg/types/participantrecord/participantrecord_schema.json"
+        required:
+          - version
+          - data
+        additionalProperties: false
+
+
   hashedrekord:
     type: object
     description: Hashed Rekord object
