# pkg/types/hashedrekord/v0.0.1/entry.go
@@ -40,6 +40,8 @@ import (
 	hashedrekord "github.com/Morrison76/rekor/pkg/types/hashedrekord"
 	"github.com/Morrison76/rekor/pkg/util"
 	"github.com/sigstore/sigstore/pkg/signature/options"
+	"github.com/Morrison76/rekor/pkg/types/participantrecord"
+
 )
 
 const (
